Fix Issue with collapse

--- a/src/cwLayoutFilteredListBox.less
+++ b/src/cwLayoutFilteredListBox.less
@@ -1,4 +1,9 @@
 div.filteredListBox {
+  &.collapsed {
+    height: -moz-max-content;
+    height: fit-content;
+  }
+
   ul.property-details {
     cursor: pointer;
     margin: 0px;
